--- a/style.css/style.css
+++ b/style.css/style.css
@@ -7,7 +7,7 @@
 }
 #main{
   
-  background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/imagem/jesus-no-santissimo-sacramento.jpg);
+  background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/imagem/jesus-no-santissimo-sacramento.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
